removed <span> tag which was causing layout issues in the header  and  that fixed the background color width for header > h1 tag. Also added the footer which was missing.

--- a/Assets/indexStyle.css
+++ b/Assets/indexStyle.css
@@ -1,10 +1,43 @@
-
-#cont1{
-    margin-bottom: 3%;
+body{
+    background-color: rgb(235, 235, 235);
 }
 
-#hdrAboutMe{
-    padding-top: 5%;
+
+#cont1{
+    background-color: white;
+    overflow: auto;
+}
+
+a{
+    color: gray;
+}
+
+
+#secondPart{
+    margin-top: 3%;
+    
+}
+.clearPad{
+    padding: 0;
+}
+section{
+    background-color: rgb(235, 235, 235);
+  
+}
+header h1{
+    background-color: mediumaquamarine;
+    width: 40%;
+    color: white;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 2%;
+    padding-right: 0%;
+
+    margin: 0;
+}
+
+section h1{
+    color: mediumaquamarine;
 }
 
 #image{
@@ -13,13 +46,33 @@ width: 40%;
 float: left;
 }
 
-@media screen and (max-width: 650px) {
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: darkgray;
+    color: white;
+    text-align: center;
+    border-top-style:solid;
+    border-color: mediumaquamarine;
+}
+
+@media screen and (max-width: 900px) {
   #image{
       clear: both;
       width: 100%;
       padding-bottom: 5%;
       
   }
+  /* #colName{
+      background-color: mediumaquamarine;
+     
+  } */
+  header h1{
+      text-align: center;
+      width: 100%;
   }
+}
 
 
